--- a/index.html
+++ b/index.html
@@ -40,14 +40,17 @@
         <table class="table table-striped">
           <div class="row">
             <div class="col">
-              <input type="text" class="form-control" placeholder="First name" aria-label="First name">
+              <label for="tasktitle" class="form-label">Task Title</label>
+              <input type="text" class="form-control" aria-label="Task Title">
             </div>
-            <div class="col">
-              <input type="text" class="form-control" placeholder="Last name" aria-label="Last name">
+            <div class="mb-3">
+              <label for="taskDueDate" class="form-label">Task Due Date</label>
+              <input type="text" class="form-control" id="datepicker" autocomplete="off" aria-label="Task Due Date">
+              
             </div>
           </div>
           <div class="mb-3">
-            <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+            <label for="exampleFormControlTextarea1" class="form-label">Task Descriptions</label>
             <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
           </div>
   </tbody>
@@ -56,7 +59,7 @@
 
     <!-- Modal footer -->
     <div class="modal-footer">
-      <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+      <button type="button" class="btn btn-success" data-dismiss="modal">Add Task</button>
     </div>
 
   </div>
@@ -103,6 +106,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
+    
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
