--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <h1 class="display-3">Task Board</h1>
     <p class="lead">A simple Kanban board for task management</p>
   </header>
+  
   <div class="container">
     <div class="text-center mb-5">
       <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#formModal">Add Task</button>
@@ -41,7 +42,7 @@
           <div class="row">
             <div class="col">
               <label for="tasktitle" class="form-label">Task Title</label>
-              <input type="text" class="form-control" aria-label="Task Title">
+              <input type="text" class="form-control" aria-label="Task Title" id="task-title">
             </div>
             <div class="mb-3">
               <label for="taskDueDate" class="form-label">Task Due Date</label>
@@ -50,8 +51,8 @@
             </div>
           </div>
           <div class="mb-3">
-            <label for="exampleFormControlTextarea1" class="form-label">Task Descriptions</label>
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+            <label for="task-description" class="form-label">Task Descriptions</label>
+            <textarea class="form-control" rows="3" id="task-description"></textarea>
           </div>
   </tbody>
 </table>
@@ -59,7 +60,7 @@
 
     <!-- Modal footer -->
     <div class="modal-footer">
-      <button type="button" class="btn btn-success" data-dismiss="modal">Add Task</button>
+      <button type="button" class="btn btn-success" data-dismiss="modal" id="add-task-btn">Add Task</button>
     </div>
 
   </div>
@@ -103,10 +104,11 @@
     </div>
   </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
-    
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
